# quantumsolver

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bernstein_vazirani_quantum.py  deutsch_jozsa_quantum.py  deutsch_quantum.py  gunicorn.conf.py  pyproject.toml  quantumsolver.py  requirements-dev.txt  requirements.txt  sat_quantum.py  shors_quantum.py  simon_generator.py  test_bernstein_vazirani.py  test_deutsch.py  test_deutsch_jozsa.py  test_routes.py  test_sat.py  test_shors.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker.yaml  main.yaml
app/: __init__.py  routes.py
deploy/: deploy.sh  quantumsolver.nginx  quantumsolver.service
src/quantumsolver/: __init__.py  app.py  bernstein_vazirani_quantum.py  bits.py  deutsch_jozsa_quantum.py  deutsch_quantum.py  routes.py  sat_quantum.py  shors_quantum.py
tests/: test_bernstein_vazirani.py  test_deutsch.py  test_deutsch_jozsa.py  test_routes.py  test_sat.py  test_shors.py
